--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,15 +54,14 @@ android {
 }
 
 dependencies {
-    // Android Core
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.30'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.room:room-guava:2.3.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.google.code.gson:gson:2.8.7'
+    // Core
+    implementation("androidx.core:core-ktx:1.6.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha03")
+    implementation("androidx.room:room-ktx:2.3.0")
+    implementation("androidx.appcompat:appcompat:1.3.1")
+    implementation("com.google.code.gson:gson:2.8.7")
 
     // firebase, google
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
@@ -73,9 +72,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
 
     // libraries
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation "io.reactivex.rxjava3:rxjava:3.0.13"
-    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
