--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
 dependencies {
     implementation("androidx.core:core-ktx:1.6.0")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha03")
     implementation("androidx.room:room-ktx:2.3.0")
