--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.yhjoo.corona_android"
+        applicationId "com.yhjoo.corona"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
