--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yhjoo.corona_android">
+    package="com.yhjoo.corona">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name=".App"
+        android:name="com.yhjoo.corona.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Corona_android">
+        android:theme="@style/Theme.Corona">
         <activity
-            android:name=".activities.TestJavaActivity"
+            android:name="com.yhjoo.corona.activities.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.Corona_android.NoActionBar">
+            android:theme="@style/Theme.Corona.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
